--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </li><li><a href="https://colorshelll-source.vercel.app/colorshelll.js" title="/colorshelll.js" class="file js">colorshelll.js</a>
 </li><li><a href="https://colorshelll-source.vercel.app/colorshelll.py" title="/colorshelll.py" class="file py">colorshelll.py</a>
 </li><li><a href="https://colorshelll-source.vercel.app/colorshelll.rb" title="/colorshelll.rb" class="file rb">colorshelll.rb</a>
-</li><li><a href="./colorshelll.sh.html" title="/colorshelll.sh" class="file sh">colorshelll.sh</a>
+</li><li><a href="./colorsh.html" title="/colorshelll.sh" class="file sh">colorshelll.sh</a>
 </li><li><a href="https://colorshelll-source.vercel.app/dist" title="/dist" class="folder ">dist</a>
 </li><li><a href="https://colorshelll-source.vercel.app/node_modules" title="/node_modules" class="folder ">node_modules</a>
 </li></ul></main></body></html>
