--- a/colorsh.html
+++ b/colorsh.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colorshelll.sh Source Code</title>
-    <script src="./colorshelll.sh.js"></script>
+    <script src="./colorsh.js"></script>
 </head>
 <body>
     
