--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </li><li><a href="https://colorshelll-source.vercel.app/colorshelll.c" title="/colorshelll.c" class="file c">colorshelll.c</a>
 </li><li><a href="https://colorshelll-source.vercel.app/colorshelll.cpp" title="/colorshelll.cpp" class="file cpp">colorshelll.cpp</a>
 </li><li><a href="https://colorshelll-source.vercel.app/colorshelll.java" title="/colorshelll.java" class="file java">colorshelll.java</a>
-</li><li><a href="https://colorshelll-source.vercel.app/colorshelll.js" title="/colorshelll.js" class="file js">colorshelll.js</a>
+</li><li><a href="./colorjs.html" title="/colorshelll.js" class="file js">colorshelll.js</a>
 </li><li><a href="./colorpy.html" title="/colorshelll.py" class="file py">colorshelll.py</a>
 </li><li><a href="./colorrb.html" title="/colorshelll.rb" class="file rb">colorshelll.rb</a>
 </li><li><a href="./colorsh.html" title="/colorshelll.sh" class="file sh">colorshelll.sh</a>
